--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "element-ui": "^2.13.2",
         "vue-router": "^3.3.4"
     }
 }
