--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "element-ui": "^2.13.2",
+        "vue-easy-dnd": "^1.8.3",
         "vue-router": "^3.3.4"
     }
 }
