--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^5.1",
+        "element-theme": "^2.0.1",
+        "element-theme-dark": "^1.0.3",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
