--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.19",
         "cross-env": "^5.1",
         "element-theme": "^2.0.1",
+        "element-theme-chalk": "^2.13.2",
         "element-theme-dark": "^1.0.3",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
