--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
+        "saasedu-element-theme-chalk": "^2.13.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
