--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "element-ui": "^2.13.2",
         "vue-easy-dnd": "^1.8.3",
-        "vue-router": "^3.3.4"
+        "vue-router": "^3.3.4",
+        "vuelidate": "^0.7.5"
     }
 }
