логика вычисления источника и приемника транзакции в сложившейся ситуации

--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,6 +1,8 @@
 *
 !.gitignore
 
-!testData.json
-!testReceivers.json
-!testSources.json
+!testTransactions.json
+!testExpenses.json
+!testIncomes.json
+!testWallets.json
+!testExpensesCategory.json
