--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-axios": "^2.1.5",
         "vue-easy-dnd": "^1.8.3",
         "vue-router": "^3.3.4",
+        "vue-scroll-loader": "^2.2.0",
         "vuex": "^3.5.1"
     }
 }
