--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "chart.js": "^2.9.3",
         "element-ui": "^2.13.2",
         "vue-axios": "^2.1.5",
+        "vue-chartjs": "^3.5.0",
         "vue-easy-dnd": "^1.8.3",
         "vue-router": "^3.3.4",
         "vue-scroll-loader": "^2.2.0",
